# ygod_gtk

./: Cargo.toml  build.rs
src/: lib.rs
src/pages/edit_collection_page/: imp.rs  mod.rs
src/utils/card/: mod.rs
src/widgets/: mod.rs
src/widgets/collection/: mod.rs
src/widgets/collection/collection_create_window/: mod.rs
src/widgets/collection/collection_list/: imp.rs  mod.rs
src/widgets/collection/collection_model/: imp.rs  mod.rs
src/widgets/collection/collection_options/: mod.rs
src/widgets/collection/collection_row/: imp.rs  mod.rs
src/widgets/draft_container/: imp.rs
src/widgets/window/: imp.rs  mod.rs
